--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,95 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  font-family: "Inter", sans-serif;
 }
-
+@supports (font-variation-settings: normal) {
+  :root {
+    font-family: "Inter var", sans-serif;
+  }
+}
+* {
+  --color-main: #e9eef2;
+  --color-gray: #9babbf;
+  --color-third: #6c7a8c;
+  --color-teal: #81e6d9;
+  --bg-color-second: #142240;
+  --bg-color-main: #0f1626;
+  --tag-bg-color: #153440;
+  --tag-color: #59d9c1;
+  padding: 0;
+  margin: 0;
+}
+a[class^="underline"] {
+  text-decoration: none;
+  padding-left: 0.125em;
+  padding-right: 0.125em;
+  padding-bottom: 0.05em;
+  position: relative;
+}
+a[class^="underline"]::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  border-bottom: 0.125em solid #3498db;
+  transition: all 0.35s;
+}
+a[class^="underline"]:hover::after {
+  transition: all 0.35s;
+}
+a.underline_from_left::after {
+  left: 0;
+  right: 100%;
+}
+a.underline_from_left:hover::after {
+  right: 0;
+}
+a.underline_from_right::after {
+  right: 0;
+  left: 100%;
+}
+a.underline_from_right:hover::after {
+  left: 0;
+}
+a.underline_from_center::after {
+  right: 50%;
+  left: 50%;
+}
+a.underline_from_center:hover::after {
+  right: 0;
+  left: 0;
+}
+#mouse {
+  position: absolute;
+  transform: translate3d(-50%, -50%, 0);
+  z-index: 100;
+  box-shadow: 0px 0px 500px 40px #00c3ff;
+}
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--color-main);
+  text-decoration: none;
+  transition: color 0.15s;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--color-teal);
 }
-
+#mouse {
+  position: absolute;
+  transform: translate3d(-50%, -50%, 0);
+  z-index: 100;
+  box-shadow: 0px 0px 500px 40px #00c3ff;
+}
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: var(--bg-color-main);
+  color: var(--color-main);
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+p {
+  margin: 20px 0;
+  color: var(--color-gray);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+a {
+  color: var(--color-main);
+  text-decoration: none;
+  transition: color 0.15s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+a:hover {
+  color: var(--color-teal);
 }
