--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,13 @@
 .content {
+  display: flex;
+  flex-direction: column;
   margin-left: 50%;
   padding-top: 80px;
   padding-right: 15%;
+  height: 100vh;
+}
+.content-inner {
+  flex: 1;
 }
 @media (max-width: 768px) {
   .content {
