--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 :root {
   font-family: "Inter", sans-serif;
 }
@@ -78,6 +83,7 @@ a:hover {
   box-shadow: 0px 0px 500px 40px #00c3ff;
 }
 body {
+  overflow-y: scroll;
   background-color: var(--bg-color-main);
   color: var(--color-main);
 }
