--- a/src/components/home/ContactForm.css
+++ b/src/components/home/ContactForm.css
@@ -49,3 +49,15 @@
 #contact-form #submit-msg:active {
   border: 1px solid whitesmoke;
 }
+.success-msg {
+  color: greenyellow;
+  font-size: 1.3rem;
+}
+.error-msg {
+  color: red;
+  font-size: 1.3rem;
+}
+.info-msg {
+  color: white;
+  font-size: 1.3rem;
+}
